--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
     <title>Tic Tac Toe Game</title>
   </head>
   <body>
+    <div class="content">
+      <div class="game-board">
+        <div class="field no-l no-t"></div>
+        <div class="field no-t"></div>
+        <div class="field no-t no-r"></div>
+        <div class="field no-l"></div>
+        <div class="field"></div>
+        <div class="field no-r"></div>
+        <div class="field no-l no-b"></div>
+        <div class="field no-b"></div>
+        <div class="field no-b no-r"></div>
+      </div>
+    </div>
     <script src="/script.js"></script>
   </body>
 </html>
