added: score, play again button, game script

--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
   </head>
   <body>
     <div class="content">
-      <div class="game-board">
+      <h1 class="wins">WINS</h1>
+      <div class="scores">
+        <div class="player">Player: 0</div>
+        <div class="opponent">Enemy: 0</div>
+      </div>
+      <div class="gameboard">
         <div class="field no-l no-t"></div>
         <div class="field no-t"></div>
         <div class="field no-t no-r"></div>
@@ -20,6 +25,7 @@
         <div class="field no-b"></div>
         <div class="field no-b no-r"></div>
       </div>
+      <div class="again">PLAY AGAIN</div>
     </div>
     <script src="/script.js"></script>
   </body>
