optimized script, added styles

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <title>Tic Tac Toe Game</title>
   </head>
   <body>
+    <div class="blur"></div>
     <div class="content">
-      <h1 class="wins">WINS</h1>
+      <h1 class="wins">TIC TAC TOE</h1>
       <div class="scores">
         <div class="player">Player: 0</div>
         <div class="opponent">Enemy: 0</div>
@@ -25,8 +26,8 @@
         <div class="field no-b"></div>
         <div class="field no-b no-r"></div>
       </div>
-      <div class="again">PLAY AGAIN</div>
     </div>
+    <div class="again">PLAY AGAIN</div>
     <script src="/script.js"></script>
   </body>
 </html>
