winner annoucment added, fixed bug where game was playable after it was over, etc.

--- a/index.html
+++ b/index.html
@@ -25,9 +25,14 @@
         <div class="field no-l no-b"></div>
         <div class="field no-b"></div>
         <div class="field no-b no-r"></div>
+        <div class="line"></div>
       </div>
+      <div class="turn"></div>
     </div>
-    <div class="again">PLAY AGAIN</div>
+    <div class="again">
+      <div class="winner"></div>
+      <div class="playAgain">PLAY AGAIN</div>
+    </div>
     <script src="/script.js"></script>
   </body>
 </html>
