Added unfinished AI, fixed bugs

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="field no-b no-r"></div>
         <div class="line"></div>
       </div>
-      <div class="turn"></div>
+      <div class="turn">PLAYER TURN</div>
     </div>
     <div class="again">
       <div class="winner"></div>
