IIFE figured out and implemented

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h1 class="wins">TIC TAC TOE</h1>
       <div class="scores">
         <div class="player">Player: 0</div>
-        <div class="opponent">Enemy: 0</div>
+        <div class="opponent">AI: 0</div>
       </div>
       <div class="gameboard">
         <div class="field no-l no-t"></div>
